# scoria

./: CMakeLists.txt  README.md
include/: scoria.h
script/: linux-build-shaders.sh  linux-build-test.sh  vulkan_init_generator.py
src/: asset.c  automaton.c  buffer_section.c  common.c  common.h  core.c  ctools.c  ctools.h  cutils_base.c  cutils_base.h  d3_deferred_pipeline.c  log.c  log.h  math.c  mesh_pack.c  pipeline.c  pipeline_3d.c  resource_pack.c  subbuffer.c  vk_mem_alloc.h  vki.h
src/shaders/: forward.frag  forward.frag.c  forward.frag.spv  forward.vert  forward.vert.c  forward.vert.spv  offscreen.frag  offscreen.frag.c  offscreen.frag.spv  offscreen.vert  offscreen.vert.c  offscreen.vert.spv
test/: cutils_math.c  cutils_math.h  main.c
test/res/: anim-test.fbx  anim-test.glb  anim-test.gltf
